Preventing validation messages appearing behind sticky header

--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -13,6 +13,11 @@
         }
     }
 
+    &--form {
+        // height of header to ensure validation messages aren't hidden behind sticky header
+        scroll-padding-top: 130px;
+    }
+
     &__header {
         @include z-index(header);
         position: fixed;
